[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
layer = 1
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 3
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -96.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
text = "NIVEL 5"

[node name="SanityLabel" type="Label" parent="VBoxContainer"]
text = "CORDURA"

[node name="SanityBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 22)
min_value = 0.0
max_value = 100.0
value = 100.0

[node name="FlashlightIcon" type="TextureRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 52.0
grow_horizontal = 0
expand_mode = 1
stretch_mode = 5

[node name="JadeoPlayer" type="AudioStreamPlayer" parent="."]
